[Add] /db search を実装し、一部メソッド名を変更する